# smart_home_analg

./: CMakeLists.txt  README.md  package.xml
include/smart_home_analg/: ScreenColorPeaksManager.hpp  SoundFileManager.hpp  SoundHelpers.hpp
src/lib/: ScreenColorPeaksManager.cpp  SoundFileManager.cpp  SoundHelpers.cpp
src/nodes/: CvBridge.cpp  ScreenColorPeaksNode.cpp  SoundFileHandlerNode.cpp
